force-app/main/default/objects/GateTraffic__c/fields/ActualDuration__c.field-meta.xml
<CustomField>
    <fullName>ActualDuration__c</fullName>
    <formula>ActualExitDateTime__c -  ActualEntryDateTime__c</formula>
    <label>Actual Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>