force-app/main/default/objects/GateTraffic__c/fields/ActualEntryDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActualEntryDateTime__c</fullName>
    <label>Actual Entry Date/Time</label>
    <type>DateTime</type>
</CustomField>