force-app/main/default/objects/GateTraffic__c/fields/ActualExitDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActualExitDateTime__c</fullName>
    <label>Actual Exit Date/Time</label>
    <type>DateTime</type>
</CustomField>