force-app/main/default/objects/GateTraffic__c/fields/CntrInTransport__c.field-meta.xml
<CustomField>
    <fullName>CntrInTransport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cntr in Tranport</label>
    <referenceTo>Container_Info__c</referenceTo>
    <relationshipLabel>GATE TRAFFIC</relationshipLabel>
    <relationshipName>GateTraffic</relationshipName>
    <type>Lookup</type>
</CustomField>