force-app/main/default/objects/GateTraffic__c/fields/ContainerNumber__c.field-meta.xml
<CustomField>
    <fullName>ContainerNumber__c</fullName>
    <formula>CntrInTransport__r.Container_NO__c</formula>
    <label>Container Number</label>
    <type>Text</type>
</CustomField>