force-app/main/default/objects/GateTraffic__c/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <label>Driver Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>