force-app/main/default/objects/GateTraffic__c/fields/EmptyFullIdentification__c.field-meta.xml
<CustomField>
    <fullName>EmptyFullIdentification__c</fullName>
    <formula>text( CntrInTransport__r.Empty_Full_Container_Identification__c )</formula>
    <label>Empty/Full Container Identification</label>
    <type>Text</type>
</CustomField>