force-app/main/default/objects/GateTraffic__c/fields/EntryPermissionStatus__c.field-meta.xml
<CustomField>
    <fullName>EntryPermissionStatus__c</fullName>
    <label>Entry Permission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APPROVAL_STATUS</valueSetName>
    </valueSet>
</CustomField>