force-app/main/default/objects/GateTraffic__c/fields/ExitPermissionStatus__c.field-meta.xml
<CustomField>
    <fullName>ExitPermissionStatus__c</fullName>
    <label>Exit Permission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APPROVAL_STATUS</valueSetName>
    </valueSet>
</CustomField>