force-app/main/default/objects/GateTraffic__c/fields/Gate__c.field-meta.xml
<CustomField>
    <fullName>Gate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GATE</label>
    <referenceTo>Gate__c</referenceTo>
    <relationshipLabel>GATE TRAFFIC</relationshipLabel>
    <relationshipName>GateTraffic</relationshipName>
    <type>Lookup</type>
</CustomField>