force-app/main/default/objects/GateTraffic__c/fields/GateOperator__c.field-meta.xml
<CustomField>
    <fullName>GateOperator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gate Operator</label>
    <referenceTo>WORKER__c</referenceTo>
    <relationshipLabel>GATE TRAFFIC</relationshipLabel>
    <relationshipName>GateTraffic</relationshipName>
    <type>Lookup</type>
</CustomField>