force-app/main/default/objects/GateTraffic__c/fields/PlanEntryDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlanEntryDateTime__c</fullName>
    <label>Plan Entry Date/Time</label>
    <type>DateTime</type>
</CustomField>