force-app/main/default/objects/GateTraffic__c/fields/PlanExitDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlanExitDateTime__c</fullName>
    <label>Plan Exit Date/Time</label>
    <type>DateTime</type>
</CustomField>