force-app/main/default/objects/GateTraffic__c/fields/TruckCompanyName__c.field-meta.xml
<CustomField>
    <fullName>TruckCompanyName__c</fullName>
    <label>Truck Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>