force-app/main/default/objects/GateTraffic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gate__c</columns>
    <columns>GateEntryExitStatus__c</columns>
    <columns>EntryPermissionStatus__c</columns>
    <columns>PlateNumber__c</columns>
    <columns>CntrInTransport__c</columns>
    <columns>ContainerNumber__c</columns>
    <columns>ActualEntryDateTime__c</columns>
    <columns>ActualExitDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>