force-app/main/default/objects/GateTraffic__c/listViews/Gate_in.listView-meta.xml
<ListView>
    <fullName>Gate_in</fullName>
    <columns>NAME</columns>
    <columns>CntrInTransport__c</columns>
    <columns>ContainerNumber__c</columns>
    <columns>PlateNumber__c</columns>
    <columns>DriverName__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>GateEntryExitStatus__c</field>
        <operation>equals</operation>
        <value>Gate Entry</value>
    </filters>
    <label>Gate in</label>
</ListView>