force-app/main/default/objects/GateTraffic__c/listViews/GateTrafficSummary.listView-meta.xml
<ListView>
    <fullName>GateTrafficSummary</fullName>
    <columns>NAME</columns>
    <columns>GateEntryExitStatus__c</columns>
    <columns>EntryPermissionStatus__c</columns>
    <columns>PlateNumber__c</columns>
    <columns>CntrInTransport__c</columns>
    <columns>PlanEntryDateTime__c</columns>
    <columns>PlanExitDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>Gate Traffic Summary</label>
</ListView>