force-app/main/default/objects/GateTraffic__c/listViews/GateTrafficToday.listView-meta.xml
<ListView>
    <fullName>GateTrafficToday</fullName>
    <columns>NAME</columns>
    <columns>GateEntryExitStatus__c</columns>
    <columns>EntryPermissionStatus__c</columns>
    <columns>PlateNumber__c</columns>
    <columns>CntrInTransport__c</columns>
    <columns>PlanEntryDateTime__c</columns>
    <columns>PlanExitDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PlanEntryDateTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Gate Traffic-Today Plan</label>
</ListView>